# portfolio-rust

./: .gitignore  Cargo.toml  Trunk.toml  animate_portfolio.sh  final_commit_script.sh  fix.sh  fix_slider_ownership.sh  gitpush.sh  index.html  modern_animation_system.sh  optimization_script.sh  package.json  package.json.temp  stage7.sh  tailwind.config.js
backup_20250524_232348/: main.scss  navigation_buttons.rs  slider.rs  tailwind.config.js
backup_modern_20250524_233917/: tailwind.config.js
backup_modern_20250524_233917/src/features/project_modal/: modal.rs
backup_modern_20250524_233917/src/features/slider/: mod.rs  navigation_buttons.rs  slider.rs
backup_modern_20250524_233917/src/pages/: home.rs
backup_modern_20250524_233917/src/shared/ui/: mod.rs
backup_modern_20250524_233917/style/: main.scss  output.css
backup_optimization_20250524_234537/src/: lib.rs  main.rs
backup_optimization_20250524_234537/src/entities/: mod.rs  project_card.rs
backup_optimization_20250524_234537/src/features/project_modal/: modal.rs  modal_header.rs
scripts/: build.sh  dev.sh  setup.sh  stage3_script.sh  test.sh
src/: app.rs  lib.rs
src/entities/: experience_item.rs  mod.rs  project_card.rs
src/features/: mod.rs
src/features/project_modal/: mod.rs  modal.rs
src/features/slider/: slider.rs  slider_image.rs
src/pages/: home.rs
src/shared/: mod.rs
src/shared/data/: experience.rs  mod.rs  portfolio.rs
src/shared/types/: mod.rs
src/widgets/: experience_section.rs  footer.rs  header.rs  mod.rs  portfolio_section.rs  resume_section.rs
style/: main.scss
(+4 files in other folders)
