[package]
name = "portfolio-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
web-sys = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

[package.metadata.leptos]
output-name = "portfolio-rust"
site-root = "."
site-pkg-dir = "pkg"
style-file = "style/output.css"
